# mobilecoin

./: .devcontainer.json  .dockerignore  .gitattributes  .gitconfig  .gitignore  .gitmodules  .mobconf  BRANCHING.md  BUILD.md  Brewfile  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE  MAINNET.md  README.md  SUMMARY.md  TERMS-OF-USE.md  TESTNET.md  buf.work.yaml  clippy.toml  configuring-your-node.md  fog-threat-model-2.1.0.md  getting-intel-attestation-service-credentials.md  mob  proposing-transactions.md  rust-toolchain  rustfmt.toml  start-testnet-client.sh  understanding-the-consensus-server.md  x86_64-mobilecoin-none-sgx.json
abstract-account-keys/: Cargo.toml  README.md
abstract-account-keys/src/: error.rs  key_image_computer.rs  lib.rs  memo_hmac_signer.rs  ring_signer.rs
account-keys/: Cargo.toml  README.md
account-keys/benches/: account_keys_benchmarks.rs
account-keys/slip10/: Cargo.toml  README.md
account-keys/slip10/examples/: make-random-key.rs  pubkey-from-mnemonic.rs
account-keys/slip10/src/: lib.rs  mnemonic2slip.py  slip2ristrettovec.py  testvectors.py
account-keys/src/: account_keys.rs  address_hash.rs  burn_address.rs  constants.rs  domain_separators.rs  entropy_check.rs  error.rs  identity.rs  impls.rs  lib.rs  limits.rs  view_key.rs
account-keys/test-vectors/: Cargo.toml  README.md  build.rs
account-keys/test-vectors/src/: lib.rs
account-keys/test-vectors/structs/: Cargo.toml
account-keys/types/: Cargo.toml
account-keys/types/src/: lib.rs  traits.rs
admin-http-gateway/: Cargo.toml  README.md
admin-http-gateway/src/: main.rs
admin-http-gateway/templates/: index.html
android-bindings/: Cargo.toml  makefile
android-bindings/docker/: Dockerfile
android-bindings/lib-wrapper/: build.gradle  settings.gradle
android-bindings/lib-wrapper/android-bindings/: build.gradle  publish.gradle
android-bindings/src/: bindings.rs  error.rs  ffi.rs  lib.rs
api/: Cargo.toml  README.md  build.rs
api/proto/: blockchain.proto  buf.yaml  external.proto  printable.proto  quorum_set.proto  watcher.proto
api/src/: conversions.rs  display.rs  lib.rs
api/src/convert/: account_key.rs  amount.rs  archive_block.rs  block.rs  block_contents.rs  block_contents_hash.rs  block_id.rs  block_metadata.rs  block_signature.rs  collateral.rs  compressed_ristretto.rs  curve_scalar.rs  dcap_evidence.rs  ed25519_multisig.rs  ed25519_signature.rs  (+40 more)
api/tests/: prost.rs  prosty.rs  tokens.rs
attest/ake/: Cargo.toml  build.rs  fst.dot  initiator.dot  responder.dot  rustfmt.toml
attest/api/: .gitignore  Cargo.toml  README.md  build.rs
attest/core/: Cargo.toml  README.md  build.rs  clippy.toml
attest/enclave-api/: Cargo.toml  README.md
attest/enclave_api/: Cargo.toml  README.md
common/: Cargo.toml  README.md
common/src/: hash.rs  hasher_builder.rs  lib.rs  lru.rs  node_id.rs  panic_handler.rs  responder_id.rs  sentry.rs  time.rs  timestamp.rs
connection/: Cargo.toml  README.md
connection/src/: credentials.rs  error.rs  grpcio_utils.rs  lib.rs  manager.rs  sync.rs  thick.rs  traits.rs
connection/test-utils/: Cargo.toml
copper-wasm/: Cargo.toml
copper-wasm/src/: lib.rs
core/: Cargo.toml  README.md
core/examples/: slip10.rs
core/src/: account_id.rs  consts.rs  keys.rs  lib.rs  memo.rs  protos.rs  subaddress.rs  traits.rs
core/tests/: README.md  mnemonic2slip.py  slip10_key.json  slip10_mnemonic.json  slip2ristrettovec.py  testvectors.py
core/types/: Cargo.toml
enclave-boundary/: Cargo.toml  README.md
enclave-boundary/src/: lib.rs  trusted.rs  untrusted.rs
libmobilecoin/: Cargo.toml  Makefile  cbindgen.toml  libmobilecoin_cbindgen.h  toolchain-config.env
libmobilecoin/include/: attest.h  bip39.h  chacha20_rng.h  common.h  crypto.h  encodings.h  fog.h  keys.h  libmobilecoin.h  slip10.h  transaction.h
libmobilecoin/src/: attest.rs  bip39.rs  chacha20_rng.rs  crypto.rs  encodings.rs  error.rs  fog.rs  keys.rs  lib.rs  slip10.rs  transaction.rs
mcconnection/: Cargo.toml  README.md
mcconnection/src/: error.rs  grpcio_utils.rs  lib.rs  manager.rs  sync.rs  thick.rs  traits.rs
mcconnection/test-utils/: Cargo.toml
mint-auditor/: Cargo.toml  README.md  diesel.toml
mint-auditor/api/: Cargo.toml  build.rs
mint-auditor/frontend/: .eslintrc.js  .prettierrc.js  README.md  package.json  tsconfig.json
mint-auditor/http-api/: Cargo.toml  build.rs
mint-auditor/src/: counters.rs  db.rs  error.rs  lib.rs  mint_tx_nonce.rs  service.rs
mint-auditor/tests/: compile_proto.sh  integration_test.py
mobilecoind/: Cargo.toml  README.md  stability-1.0.1.diff  start-testnet-client.sh  start-testnet-mobilecoind.sh  testoutput.txt
mobilecoind-dev-faucet/: Cargo.toml  README.md
mobilecoind-dev-faucet/src/: data_types.rs  lib.rs  worker.rs
mobilecoind-json/: Cargo.toml  README.md
mobilecoind-json/src/: data_types.rs  lib.rs  main.rs
mobilecoind-json/tests/: integration_test.py  test.sh
mobilecoind/api/: Cargo.toml  build.rs
mobilecoind/src/: config.rs  conversions.rs  database.rs  database_key.rs  db_crypto.rs  error.rs  lib.rs  monitor_store.rs  payments.rs  processed_block_store.rs  service.rs  subaddress_store.rs  sync.rs  t3_store.rs  t3_sync.rs  test_utils.rs  transaction_memo.rs  utxo_store.rs
mobilecoind/strategies/: .gitignore  accounts.py  balances.py  burn.py  compile_proto.sh  drain-accounts.py  requirements.txt  setup_protos  test_client.py
peers/: Cargo.toml  README.md
peers/src/: broadcast.rs  connection.rs  consensus_msg.rs  error.rs  lib.rs  sync.rs  threaded_broadcaster.rs  threaded_broadcaster_retry.rs  traits.rs
peers/test-utils/: Cargo.toml
slam/: Cargo.toml  README.md
slam/src/: config.rs  lib.rs  main.rs
testnet-client/: Cargo.toml
testnet-client/src/: main.rs
wasm-test/: Cargo.toml
wasm-test/src/: lib.rs
watcher/: Cargo.toml  README.md
watcher/api/: Cargo.toml  README.md
watcher/src/: attestation_evidence_collector.rs  block_data_store.rs  config.rs  error.rs  lib.rs  metrics.rs  signature_store.rs  verification_reports_collector.rs  watcher.rs  watcher_db.rs
(+2628 files in other folders)
