cargo-features = ["named-profiles"]

[workspace]
resolver = "2"
members = [
    "account-keys",
    "account-keys/slip10",
    "admin-http-gateway",
    "android-bindings",
    "api",
    "attest/ake",
    "attest/api",
    "attest/core",
    "attest/net",
    "attest/trusted",
    "attest/untrusted",
    "attest/verifier",
    "common",
    "connection",
    "connection/test-utils",
    "consensus/api",
    "consensus/enclave",
    "consensus/enclave/api",
    "consensus/enclave/edl",
    "consensus/enclave/impl",
    "consensus/enclave/measurement",
    "consensus/enclave/mock",
    "consensus/scp",
    "consensus/scp/play",
    "consensus/service",
    "crypto/box",
    "crypto/digestible",
    "crypto/digestible/derive/test",
    "crypto/digestible/signature",
    "crypto/digestible/test-utils",
    "crypto/keys",
    "crypto/message-cipher",
    "crypto/multisig",
    "crypto/noise",
    "crypto/rand",
    "crypto/x509/test-vectors",
    "crypto/x509/utils",
    "enclave-boundary",
    "fog/api",
    "fog/distribution",
    "fog/enclave_connection",
    "fog/ingest/client",
    "fog/ingest/enclave",
    "fog/ingest/enclave/api",
    "fog/ingest/enclave/edl",
    "fog/ingest/enclave/impl",
    "fog/ingest/enclave/measurement",
    "fog/ingest/server",
    "fog/kex_rng",
    "fog/ledger/connection",
    "fog/ledger/enclave",
    "fog/ledger/enclave/api",
    "fog/ledger/enclave/edl",
    "fog/ledger/enclave/impl",
    "fog/ledger/enclave/measurement",
    "fog/ledger/server",
    "fog/load_testing",
    "fog/ocall_oram_storage/edl",
    "fog/ocall_oram_storage/testing",
    "fog/ocall_oram_storage/trusted",
    "fog/ocall_oram_storage/untrusted",
    "fog/overseer/server",
    "fog/recovery_db_iface",
    "fog/report/api",
    "fog/report/cli",
    "fog/report/connection",
    "fog/report/server",
    "fog/report/types",
    "fog/report/validation",
    "fog/report/validation/test-utils",
    "fog/sample-paykit",
    "fog/sig",
    "fog/sig/authority",
    "fog/sig/report",
    "fog/sql_recovery_db",
    "fog/test-client",
    "fog/test_infra",
    "fog/types",
    "fog/uri",
    "fog/view/connection",
    "fog/view/enclave",
    "fog/view/enclave/api",
    "fog/view/enclave/edl",
    "fog/view/enclave/impl",
    "fog/view/enclave/measurement",
    "fog/view/load-test",
    "fog/view/protocol",
    "fog/view/server",
    "go-grpc-gateway/testing",
    "ledger/db",
    "ledger/distribution",
    "ledger/from-archive",
    "ledger/migration",
    "ledger/streaming/api",
    "ledger/streaming/client",
    "ledger/streaming/publisher",
    "ledger/sync",
    "libmobilecoin",
    "mobilecoind",
    "mobilecoind-json",
    "mobilecoind/api",
    "peers",
    "peers/test-utils",
    "sgx/compat-edl",
    "sgx/css",
    "sgx/css-dump",
    "sgx/debug-edl",
    "sgx/panic-edl",
    "sgx/report-cache/api",
    "sgx/report-cache/untrusted",
    "sgx/slog-edl",
    "test-vectors/account-keys",
    "test-vectors/b58-encodings",
    "transaction/core",
    "transaction/core/test-utils",
    "transaction/std",
    "util/b58-decoder",
    "util/build/enclave",
    "util/build/grpc",
    "util/build/script",
    "util/build/sgx",
    "util/encodings",
    "util/ffi",
    "util/from-random",
    "util/generate-sample-ledger",
    "util/grpc",
    "util/grpc-admin-tool",
    "util/grpc-token-generator",
    "util/host-cert",
    "util/keyfile",
    "util/lmdb",
    "util/logger-macros",
    "util/metered-channel",
    "util/metrics",
    "util/parse",
    "util/repr-bytes",
    "util/seeded-ed25519-key-gen",
    "util/serial",
    "util/telemetry",
    "util/test-helper",
    "util/test-vector",
    "util/uri",
    "watcher",
    "watcher/api",
]
exclude = [
    # N.B. for some reason, putting these crates under `exclude` helps with
    # making `cargo test --all` work, when `consensus-enclave-impl` is part of workspace
    "fog/ingest/enclave/trusted",
    "fog/ledger/enclave/trusted",
    "fog/view/enclave/trusted",
    "sgx",
    # mc-util-serial should only be accessed via the `common` crate.
    "util/serial",
]

[profile.dev]
opt-level = 0
rpath = true

[profile.release]
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false

[profile.mobile]
inherits = "release"
debug = false
lto = true

[profile.mobile-release]
inherits = "mobile"
codegen-units = 1

# Skip the need for LD_LIBRARY_PATH in `cargo test`
[profile.test]
rpath = true

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "65f8af4ca0bc1cb2fd2148c3259a0a76b155ff3e" }

# This version contains iOS build fixes
cmake = { git = "https://github.com/alexcrichton/cmake-rs", rev = "5f89f90ee5d7789832963bffdb2dcb5939e6199c" }

# Fix issues with recent nightlies, bump curve25519-dalek version
curve25519-dalek = { git = "https://github.com/mobilecoinfoundation/curve25519-dalek.git", rev = "8791722e0273762552c9a056eaccb7df6baf44d7" }
ed25519-dalek = { git = "https://github.com/mobilecoinfoundation/ed25519-dalek.git", rev = "4194e36abc75722e6fba7d552e719448fc38c51f" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinofficial/rust-mbedtls.git", rev = "49a293a5f4b1ef571c71174e3fa1f301925f3915" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinofficial/rust-mbedtls.git", rev = "49a293a5f4b1ef571c71174e3fa1f301925f3915" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "5c98ae068ee4652d6df6463b549fbf2d5d132faa" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "c1966b8743d320cd07a54191475e5c0f94b2ea30" }
