cargo-features = ["named-profiles"]

[workspace]
members = [
    "account-keys",
    "account-keys/types",
    "admin-http-gateway",
    "api",
    "attest/ake",
    "attest/api",
    "attest/core",
    "attest/net",
    "attest/trusted",
    "attest/untrusted",
    "attest/verifier",
    "attest/verifier/config",
    "attest/verifier/types",
    "blockchain/types",
    "blockchain/validators",
    "common",
    "connection",
    "connection/test-utils",
    "consensus/api",
    "consensus/enclave",
    "consensus/enclave/api",
    "consensus/enclave/edl",
    "consensus/enclave/impl",
    "consensus/enclave/measurement",
    "consensus/enclave/mock",
    "consensus/mint-client",
    "consensus/scp",
    "consensus/scp/play",
    "consensus/scp/types",
    "consensus/service",
    "consensus/service/config",
    "consensus/tool",
    "core",
    "core/types",
    "crypto/box",
    "crypto/digestible",
    "crypto/digestible/derive/test",
    "crypto/digestible/signature",
    "crypto/digestible/test-utils",
    "crypto/keys",
    "crypto/memo-mac",
    "crypto/message-cipher",
    "crypto/multisig",
    "crypto/noise",
    "crypto/ring-signature",
    "crypto/ring-signature/signer",
    "crypto/sig",
    "crypto/x509/test-vectors",
    "crypto/x509/utils",
    "enclave-boundary",
    "fog/api",
    "fog/distribution",
    "fog/enclave_connection",
    "fog/ingest/client",
    "fog/ingest/enclave",
    "fog/ingest/enclave/api",
    "fog/ingest/enclave/edl",
    "fog/ingest/enclave/impl",
    "fog/ingest/enclave/measurement",
    "fog/ingest/report",
    "fog/ingest/server",
    "fog/kex_rng",
    "fog/ledger/connection",
    "fog/ledger/enclave",
    "fog/ledger/enclave/api",
    "fog/ledger/enclave/edl",
    "fog/ledger/enclave/impl",
    "fog/ledger/enclave/measurement",
    "fog/ledger/server",
    "fog/load_testing",
    "fog/ocall_oram_storage/edl",
    "fog/ocall_oram_storage/testing",
    "fog/ocall_oram_storage/trusted",
    "fog/ocall_oram_storage/untrusted",
    "fog/overseer/server",
    "fog/recovery_db_iface",
    "fog/report/api",
    "fog/report/cli",
    "fog/report/connection",
    "fog/report/resolver",
    "fog/report/server",
    "fog/report/types",
    "fog/report/validation",
    "fog/report/validation/test-utils",
    "fog/sample-paykit",
    "fog/sig",
    "fog/sig/authority",
    "fog/sig/report",
    "fog/sql_recovery_db",
    "fog/sql_recovery_db/cleanup",
    "fog/test-client",
    "fog/test_infra",
    "fog/types",
    "fog/uri",
    "fog/view/connection",
    "fog/view/enclave",
    "fog/view/enclave/api",
    "fog/view/enclave/edl",
    "fog/view/enclave/impl",
    "fog/view/enclave/measurement",
    "fog/view/load-test",
    "fog/view/protocol",
    "fog/view/server",
    "go-grpc-gateway/testing",
    "ledger/db",
    "ledger/distribution",
    "ledger/from-archive",
    "ledger/migration",
    "ledger/sync",
    "mobilecoind",
    "mobilecoind-dev-faucet",
    "mobilecoind-json",
    "mobilecoind/api",
    "peers",
    "peers/test-utils",
    "sgx/compat-edl",
    "sgx/css",
    "sgx/css-dump",
    "sgx/debug-edl",
    "sgx/panic-edl",
    "sgx/report-cache/api",
    "sgx/report-cache/untrusted",
    "sgx/slog-edl",
    "test-vectors/account-keys",
    "test-vectors/b58-encodings",
    "test-vectors/memos",
    "test-vectors/tx-out-records",
    "transaction/builder",
    "transaction/core",
    "transaction/core/test-utils",
    "transaction/extra",
    "transaction/signer",
    "transaction/summary",
    "transaction/types",
    "util/b58-decoder",
    "util/build/enclave",
    "util/build/grpc",
    "util/build/script",
    "util/build/sgx",
    "util/cli",
    "util/dump-ledger",
    "util/encodings",
    "util/ffi",
    "util/from-random",
    "util/generate-sample-ledger",
    "util/grpc",
    "util/grpc-admin-tool",
    "util/grpc-token-generator",
    "util/host-cert",
    "util/keyfile",
    "util/lmdb",
    "util/logger-macros",
    "util/metered-channel",
    "util/metrics",
    "util/parse",
    "util/repr-bytes",
    "util/seeded-ed25519-key-gen",
    "util/serial",
    "util/telemetry",
    "util/test-helper",
    "util/test-vector",
    "util/u64-ratio",
    "util/uri",
    "util/vec-map",
    "util/zip-exact",
    "wasm-test",
    "watcher",
    "watcher/api",
]
exclude = [
    # N.B. for some reason, putting these crates under `exclude` helps with
    # making `cargo test --all` work, when `consensus-enclave-impl` is part of workspace
    "fog/ingest/enclave/trusted",
    "fog/ledger/enclave/trusted",
    "fog/view/enclave/trusted",
    "sgx",
    # mc-util-serial should only be accessed via the `common` crate.
    "util/serial",
]

[workspace.package]
rust-version = "1.67.0"

[profile.dev]
opt-level = 0
rpath = true

[profile.release]
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false

[profile.mobile]
inherits = "release"
debug = false
lto = true

[profile.mobile-release]
inherits = "mobile"
codegen-units = 1
lto = false

# Skip the need for LD_LIBRARY_PATH in `cargo test`
[profile.test]
rpath = true

[profile.ci]
# Build config.
inherits = "test"
# Enable some compiler optimizations.
opt-level = 2
# LLVM's Link-Time Optimization: Some, relatively quick to generate.
lto = "thin"

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "99c0520aa79401b69fb51d38172cd58c6a256cfb" }

# Fix issues with recent nightlies, bump curve25519-dalek version
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek.git", rev = "2931c688eb11341a1145e257bc41d8ecbe36277c" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "98d3af413c1e23ea89cc5f41ab4dddb1944405af" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "98d3af413c1e23ea89cc5f41ab4dddb1944405af" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "b76d8c3a50671b08af0874b25b2543d3302d794d" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "4fbaa3343301c62cfdbc3023c9f485257e6b718a" }
