[package]
name = "mc-account-keys"
version = "1.1.2"
authors = ["MobileCoin"]
edition = "2018"
readme = "README.md"

[dependencies]
# External dependencies
displaydoc = { version = "0.2", default-features = false }
hkdf = { version = "0.9.0", default-features = false }
prost = { version = "0.6.1", default-features = false, features = ["prost-derive"] }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

# MobileCoin dependencies
mc-crypto-digestible = { path = "../crypto/digestible" }
mc-crypto-hashes = { path = "../crypto/hashes" }
mc-crypto-keys = { path = "../crypto/keys", default-features = false }
mc-fog-sig-authority = { path = "../fog/sig/authority" }
mc-util-from-random = { path = "../util/from-random" }
mc-util-repr-bytes = { path = "../util/repr-bytes", default-features = false, features = ["alloc"] }
mc-util-serial = { path = "../util/serial" }

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.0", default-features = false, features = ["simd_backend", "nightly"] }
blake2 = { version = "0.9.0", default-features = false, features = ["simd"] }

[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.0", default-features = false, features = ["nightly", "u64_backend"] }
blake2 = { version = "0.9.0", default-features = false }

[dev-dependencies]
criterion = "0.3"
datatest = "0.6.4"
rand = "0.8"
rand_hc = "0.3"
tempdir = "0.3"

mc-test-vectors-account-keys = { path = "../test-vectors/account-keys" }
mc-util-test-helper = { path = "../util/test-helper" }
mc-util-test-vector = { path = "../util/test-vector" }

[[bench]]
name = "account_keys_benchmarks"
harness = false
