[package]
name = "mc-account-keys"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2021"
readme = "README.md"

[features]
std = []

simd_backend = [ "curve25519-dalek/simd_backend" ]
u64_backend = [ "curve25519-dalek/u64_backend" ]
u32_backend = [ "curve25519-dalek/u32_backend" ]

default = [ "std", "prost", "mc-util-serial", "mc-util-repr-bytes/alloc", "mc-crypto-digestible/default", "mc-crypto-hashes/default", "mc-fog-sig-authority/default" ]

[dependencies]
# External dependencies
displaydoc = { version = "0.2", default-features = false }
hkdf = "0.12.3"
prost = { version = "0.11", default-features = false, features = ["prost-derive"], optional = true }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

# MobileCoin dependencies
mc-account-keys-types = { path = "types" }
mc-crypto-digestible = { path = "../crypto/digestible" }
mc-crypto-hashes = { path = "../crypto/hashes", default_features = false }
mc-crypto-keys = { path = "../crypto/keys", default_features = false }
mc-fog-sig-authority = { path = "../fog/sig/authority", default_features = false }
mc-util-from-random = { path = "../util/from-random" }
mc-util-repr-bytes = { path = "../util/repr-bytes", default-features = false }
mc-util-serial = { path = "../util/serial", optional = true }
mc-account-keys-slip10 = { path = "./slip10" }

curve25519-dalek = { version = "4.0.0-pre.2", default-features = false }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
rand_hc = "0.3"
tempdir = "0.3"

mc-test-vectors-account-keys = { path = "../test-vectors/account-keys" }
mc-util-test-helper = { path = "../util/test-helper" }
mc-util-test-vector = { path = "../util/test-vector" }
mc-util-test-with-data = { path = "../util/test-with-data" }

[[bench]]
name = "account_keys_benchmarks"
harness = false
