[package]
name = "mc-account-keys"
version = "2.1.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
readme = "README.md"

[features]
std = ["mc-util-repr-bytes/alloc"]
prost = ["dep:prost", "mc-util-repr-bytes/prost", "mc-crypto-keys/prost"]
serde = ["mc-crypto-keys/serde"]
default = ["std", "prost", "serde", "mc-util-serial", "mc-crypto-digestible/default", "mc-crypto-hashes/default", "mc-crypto-keys/default"]

[dependencies]

curve25519-dalek = { version = "4.0.0-pre.2", default-features = false, features = ["nightly"] }
# External dependencies
displaydoc = { version = "0.2", default-features = false }
hkdf = "0.12.3"

# MobileCoin dependencies
mc-account-keys-types = { path = "types" }
mc-core = { path = "../core", default_features = false }
mc-crypto-digestible = { path = "../crypto/digestible", default_features = false }
mc-crypto-hashes = { path = "../crypto/hashes", default_features = false }
mc-crypto-keys = { path = "../crypto/keys", default-features = false }
mc-fog-sig-authority = { path = "../fog/sig/authority" }
mc-util-from-random = { path = "../util/from-random" }
mc-util-repr-bytes = { path = "../util/repr-bytes", default-features = false }
mc-util-serial = { path = "../util/serial", optional = true }
prost = { version = "0.11", optional = true, default-features = false, features = ["prost-derive"] }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

[dev-dependencies]
criterion = "0.4"

mc-test-vectors-account-keys = { path = "../test-vectors/account-keys" }
mc-util-test-helper = { path = "../util/test-helper" }
mc-util-test-vector = { path = "../util/test-vector" }
mc-util-test-with-data = { path = "../util/test-with-data" }
rand = "0.8"
rand_hc = "0.3"
tempdir = "0.3"

[[bench]]
name = "account_keys_benchmarks"
harness = false
