[package]
name = "mc-admin-http-gateway"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
mc-common = { path = "../common", features = ["loggers"] }
mc-util-grpc = { path = "../util/grpc" }
mc-util-uri = { path = "../util/uri" }

clap = { version = "3.2", features = ["derive", "env"] }
grpcio = "0.10.2"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
