[package]
name = "mc-admin-http-gateway"
version = "5.2.1"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
mc-common = { path = "../common", features = ["loggers"] }
mc-util-grpc = { path = "../util/grpc" }
mc-util-uri = { path = "../util/uri" }

clap = { version = "4.4", features = ["derive", "env"] }
grpcio = "0.13"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
