[package]
name = "mc-admin-http-gateway"
version = "7.0.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
mc-common = { path = "../common", features = ["loggers"] }
mc-util-grpc = { path = "../util/grpc" }
mc-util-uri = { path = "../util/uri" }

clap = { version = "4.5", features = ["derive", "env"] }
grpcio = { version = "0.13", default-features = false, features = ["prost-codec"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
