[package]
name = "mc-android-bindings"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "mobilecoin_android"
crate-type = ["cdylib"]

[dependencies]
# External dependencies
crc = "3.0.0"

# fog
mc-fog-kex-rng = { path = "../fog/kex_rng" }

# mobilecoin
mc-account-keys = { path = "../account-keys" }
mc-account-keys-slip10 = { path = "../account-keys/slip10" }
mc-api = { path = "../api" }
mc-attest-ake = { path = "../attest/ake", default-features = false }
mc-attest-core = { path = "../attest/core", default-features = false }
mc-attest-verifier = { path = "../attest/verifier", default-features = false }
mc-common = { path = "../common" }
mc-crypto-box = { path = "../crypto/box" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-crypto-noise = { path = "../crypto/noise" }
mc-crypto-rand = { path = "../crypto/rand", features = ["std"] }
mc-crypto-ring-signature-signer = { path = "../crypto/ring-signature/signer", default-features = false }
mc-fog-report-types = { path = "../fog/report/types" }
mc-fog-report-validation = { path = "../fog/report/validation" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-std = { path = "../transaction/std" }
mc-util-encodings = { path = "../util/encodings" }
mc-util-from-random = { path = "../util/from-random" }
mc-util-serial = { path = "../util/serial" }
mc-util-uri = { path = "../util/uri" }

# third-party
aes-gcm = { version = "0.9.4", default-features = false }
anyhow = "1.0"
displaydoc = { version = "0.2", default-features = false }
generic-array = { version = "0.14", features = ["more_lengths", "serde"] }
jni = { version = "0.19.0", default-features = false }
protobuf = "2.27.1"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3.1" }
sha2 = { version = "0.10", default-features = false }
slip10_ed25519 = "0.1.3"
tiny-bip39 = "1.0"
zeroize = "1.5"
